# fonge_math

./: .gitmodules  CMakeLists.txt  README.md  fonge_math.cpp  generate_swizzles.cpp  tests.cpp
.cache/clangd/index/: 2intersect.h.0F164618E0455DBF.idx  2intersect.h.775D75EC049BC114.idx  4dpwssd.h.78DC542AD510A0C0.idx  4dpwssd.h.7F8A5C213A0AAF6D.idx  4dpwssds.h.8386ABBE8FDD856E.idx  4dpwssds.h.B3D39B2F67634C67.idx  abs.h.04F7523C25C1248D.idx  abs.h.F2B2B104F3E6EB7F.idx  add.h.AFB6449C2F25310B.idx  add.h.E9E0999C49083284.idx  adds.h.4DA7B48E9C9AEC7E.idx  adds.h.D7BF88EF662AD944.idx  and.h.27927993EBC3EA6A.idx  and.h.71D8391D6574E751.idx  andnot.h.5E1CB9E31A709922.idx  andnot.h.91010B0F7424E3DA.idx  avg.h.883596C218132B47.idx  avg.h.89A815A77994939A.idx  avx.h.29659384824D3CB2.idx  avx.h.488FDEF80FC409CF.idx  avx2.h.4DFA6986F7F3850B.idx  avx2.h.7277F157F4C89226.idx  avx512.h.0B3E54100157A8CE.idx  avx512.h.E1D273A8EFD0A11F.idx  bitshuffle.h.59778BD237F39686.idx  bitshuffle.h.91EECAF673F40115.idx  blend.h.4F69C69259A913F2.idx  (+301 more)
include/: matrix_double.hpp  matrix_float.hpp  quaternion_float.hpp  vector_double.hpp  vector_float.hpp
include/fonge/: common_ops.hpp  constants.hpp  matrix_double.hpp  matrix_float.hpp  quaternion_double.hpp  quaternion_float.hpp  shapes.hpp  transforms.hpp  vector_double.hpp  vector_float.hpp
include/swizzles/: double1_swizzles_impl  double2_swizzles_decl  double3_swizzles_decl  float1_swizzles_decl  float2_swizzles_decl  float3_swizzles_impl  float4_swizzles_decl  float4_swizzles_impl  int1_swizzles_decl  int1_swizzles_impl  int2_swizzles_impl
(+13 files in other folders)
